--- a/src/pages/programs.astro
+++ b/src/pages/programs.astro
@@ -238,7 +238,7 @@ const classGroupSections = [
                               const targetSlug = classItem.slug ?? classItem.meta?.slug ?? classSlug;
                               return (
                                 <a
-                                  href={`#class-${targetSlug}`}
+                                  href={`/classes/${targetSlug}`}
                                   class="class-lozenge"
                                   style={`background-color: ${getTopicColor(classTopics)}`}
                                 >
